--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-merlot
-title: Welcome to Thelius42's homepage
-description: Feel free to bookmark this to keep an eye on my project updates
+title: Welcome to Ian Loney's Portfolio
+description: This portfolio contains explanations and analysis of Ian's sample student registration portal site
