--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-slate
+theme: jekyll-theme-time-machine
 title: Welcome to Ian Loney's Portfolio
 description: This portfolio contains explanations and analysis of Ian's sample student registration portal site
